# open_vins

./: run_ros_openvins.sh
config/mate20/: cam+imu-camchain-imucam.yaml  cam+imu-imu.yaml  estimator_config.yaml
ov_msckf/: CMakeLists.txt  CMakeLists_backup.txt  build.sh  run_custom_dataset.sh
ov_msckf/launch/: subscribe.launch
ov_msckf/src/: run_custom_dataset_without_ros.cpp
ov_msckf/src/utils/: ConfigReader.h
